Include a new setting, ATMOSPHERE_INSTANCE_DEPLOYMENT, and allow resize to use/skip deployment based on that setting.

--- a/atmosphere/settings/local.py.j2
+++ b/atmosphere/settings/local.py.j2
@@ -209,6 +209,7 @@ CSRF_TRUSTED_ORIGINS = ALLOWED_HOSTS
 
 
 # Atmosphere Keypair/Deployment Configs
+ATMOSPHERE_INSTANCE_DEPLOYMENT = {{ ATMOSPHERE_INSTANCE_DEPLOYMENT }}
 ATMOSPHERE_PRIVATE_KEYFILE = os.path.join(PROJECT_ROOT, 'extras/ssh/id_rsa')
 ATMOSPHERE_KEYPAIR_FILE = os.path.join(PROJECT_ROOT, 'extras/ssh/id_rsa.pub')
 ATMOSPHERE_KEYPAIR_NAME = '{{ DEPLOYMENT_KEYPAIR_NAME }}'
